added admin and student dashboard

--- a/src/assets/Style/Footer.css
+++ b/src/assets/Style/Footer.css
@@ -1,6 +1,6 @@
 
 #footer-container {
-    
+    background-color:rgb(4, 18, 27);
     background-size: cover;
     height:'30vh';
     width: 100%;
