--- a/src/assets/Style/LoginForm.css
+++ b/src/assets/Style/LoginForm.css
@@ -3,13 +3,10 @@
     /* margin: 0 auto; */
     padding: 20px;
     padding-top: 50px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    /* border: 1px solid #ddd; */
+    /* border-radius: 5px; */
     margin-top: 12px;
     margin-left: 80px;
-    
-
-    
 }
 
 .link {
@@ -26,4 +23,9 @@
     border: none;
     font-weight: 300;
     border-radius: 15px;
+}
+
+h3 {
+    text-align: left;
+    padding-left: 30px;
 }
